--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,12 +1,3 @@
 *Common Functions*
 
-* [Articles HOWTO articles]
-    * [ArticlesXSS Web security]
-    * [ArticlesDom DOM manipulation]
-    * [ArticlesStyle CSS and style]
-    * [ArticlesTips Tips and tricks]
-  * [DOMReference DOM reference]
-     * [DOMReference aaaaa]
-     * [DOMReference bbbbbbb]
-  * [HTMLElements HTML reference]
-  * [CSSReference CSS reference]
+<wiki:toc max_depth="3" />
