--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,9 +1,9 @@
 *Common Functions*
 
-* Player
- # func-01
-    # func-011
- # func-02
+Player
+    func-01
+        func-011
+    func-02
 
  # DataPool
   # func-03
