Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,10 +1,7 @@
 *Common Functions*
 
-Player
-    # func-01
-        # func-011
-    # func-02
-
- # DataPool
-  # func-03
-  # func-04
+* A list
+  * Of bulleted items
+    # This is a numbered sublist
+    # Which is done by indenting further
+  * And back to the main bulleted list
