Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,10 +1,3 @@
+<wiki:toc max_depth="1" />
+
 *Common Functions*
-
-* A list
-   # This is a numbered sublist
-   # Which is done by indenting further
-
-* Notice that it is rendered
-  # At the same levels
-  # As the above lists.
- * Despite the different indentation levels.
