--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,5 +1,7 @@
 *Common Functions*
 
-* [1 Player]
-  * [2 Function 1]
-  * [3 Function 2]
+* Player
+  * Function 1
+  * Function 2
+
+https://code.google.com/p/support/wiki/WikiSyntax#Wiki-style_markup
