Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -3,7 +3,7 @@
 ===contents===
 
   * *[Test]*
-  * *[OMUsage Simulations]*
+  * *[TestSimulations]*
     * [SetupOverview Getting started (local simulations)]
       * [Binaries Pre-compiled binaries]
       * [UtilsWindows Useful utilities on Windows]
