--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -6,3 +6,6 @@
     * [Player#UseSkillInLua_Const Player:UseSkillInLua_Const]
     * [Player#LeaveTeam Player:LeaveTeam]
     * [Player#GetPos Player:GetPos]
+	
+  * [https://code.google.com/p/support/wiki/WikiSyntax WikiSyntax]
+  * [https://code.google.com/p/support/wiki/WikiFAQ#Can_I_download_wiki_content_as_HTML? How to download wiki content as HTML]
