--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -1,11 +1,11 @@
 ===Common functions===
 
-  * [GettingStarted Getting Started]
-  * Player
+  * *[GettingStarted Getting Started]*
+  * *Player*
     * [Player#GetName Player:GetName]
     * [Player#UseSkillInLua_Const Player:UseSkillInLua_Const]
     * [Player#LeaveTeam Player:LeaveTeam]
     * [Player#GetPos Player:GetPos]
 	
-  [https://code.google.com/p/support/wiki/WikiSyntax WikiSyntax]
-  [https://code.google.com/p/support/wiki/WikiFAQ#Can_I_download_wiki_content_as_HTML? How to download wiki content as HTML]
+  * [https://code.google.com/p/support/wiki/WikiSyntax _WikiSyntax_]
+  * [https://code.google.com/p/support/wiki/WikiFAQ#Can_I_download_wiki_content_as_HTML? _How to download wiki content as HTML_]
