Edited wiki page TOC through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -1,6 +1,6 @@
 ===Common functions===
 
-  * *[GettingStarted Getting Started]*
+  * *[GettingStarted Getting Started]*<br/>
 
   * *Player*
     * [Player#GetName Player:GetName]
