--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -1,4 +1,5 @@
-  ===[GettingStarted Getting Started]===
+  === ===
+  * *[GettingStarted Getting Started]*
   
   ===Common functions===
   * *Player*
